# minimal-nav2-params-bug

./: Dockerfile  Makefile  README.md
nav2_bug_repro_pkg/: CMakeLists.txt  package.xml
nav2_bug_repro_pkg/config/: bad_params.yaml  good_params.yaml
nav2_bug_repro_pkg/launch/: demo.launch.py
nav2_bug_repro_pkg/maps/: map.pgm  map.yaml
nav2_bug_repro_pkg/scripts/: path_request_node.py
